enable home & pagination

--- a/index.html
+++ b/index.html
@@ -1,5 +1,33 @@
 ---
-title: Olivier Patry
+title: Home & Resume
 layout: default
 ---
-<h1>This is a test</h1>
+
+Welcome here! You are on the personal website of Olivier Patry, software engineer working for [IS2T](http://www.is2t.com/) (Embedded Java Solutions).
+
+##About
+![](articles/portrait.png)
+28 years old.
+
+Software engineer specialized in software **architecture** and **object oriented** programming for **constrained embedded devices**.
+
+email address: <olivier.patry@gmail.com>
+
+##Knowledge
+Languages & frameworks
+:	**Java** (J2ME, J2SE, OSGi), Ant, &#8230;
+
+Tools & operating systems
+:	**Eclipse**, Jazz RTC, GNU/Linux, Microsoft Windows, LaTeX, &#8230;
+
+Methods
+:	Object Oriented Patterns, Extrem programming Scrum, MDE/MDA, &#8230;
+
+##Spoken languages
+* French: native speaker.
+* English: fluent (Code documentation, Specifications reading & writing, World wide technical support).
+
+##Hobbies
+* Badminton (Active member and competitor)
+* Running
+* Reading
