--- a/index.html
+++ b/index.html
@@ -31,3 +31,18 @@ Methods
 * Badminton (Active member and competitor)
 * Running
 * Reading
+
+<ul>
+{% for post in paginator.posts %}
+<li>
+  	<div>
+  	{{ post.date | date_to_long_string  }}
+  	</div>
+  	<h2>
+  	<a href="{{ post.url }}">
+  	{{ post.title }}
+  	</a>
+  	</h2>
+  </li>
+{% endfor %}
+</ul>
