--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Home & Resume
-layout: default
+layout: markdown
 ---
 Welcome here! You are on the personal website of Olivier Patry, software engineer working for [IS2T](http://www.is2t.com/) (Embedded Java Solutions).
 
