Add missing Resume portrait

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: markdown
 Welcome here! You are on the personal website of Olivier Patry, software engineer working for [IS2T](http://www.is2t.com/) (Embedded Java Solutions).
 
 ##About
-![](articles/portrait.png)
+![](/images/portrait.png)
 28 years old.
 
 Software engineer specialized in software **architecture** and **object oriented** programming for **constrained embedded devices**.
