--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 title: Home & Resume
 layout: markdown
+tags: [Olivier Patry]
 ---
 Welcome here! You are on the personal website of Olivier Patry, software engineer working for [IS2T](http://www.is2t.com/) (Embedded Java Solutions).
 
@@ -30,9 +31,3 @@ Methods
 * Badminton (Active member and competitor)
 * Running
 * Reading
-
-## Notes
-{% for post in paginator.posts %}
-* ### [{{ post.title }}]({{ post.url }})
-{{ post.date | date_to_long_string  }}
-{% endfor %}
