fix portrait path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ tags: [Olivier Patry]
 Welcome here! You are on the personal website of Olivier Patry, software engineer working for [IS2T](http://www.is2t.com/) (Embedded Java Solutions).
 
 ##About
-![](/images/portrait.png)
+![](/images/authors/opatry.png)
 28 years old.
 
 Software engineer specialized in software **architecture** and **object oriented** programming for **constrained embedded devices**.
