--- a/index.html
+++ b/index.html
@@ -31,3 +31,11 @@ Methods
 * Badminton (Active member and competitor)
 * Running
 * Reading
+
+<hr>
+<h2>Notes</h2>
+<ul>
+{% for post in site.posts %}
+<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+{% endfor %}
+</ul>
