update company and skills

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: Home & Resume
 layout: markdown
 tags: [Olivier Patry]
 ---
-Welcome here! You are on the personal website of Olivier Patry, software engineer working for [IS2T](http://www.is2t.com/) (Embedded Java Solutions).
+Welcome here! You are on the personal website of Olivier Patry, software engineer working for [Vision Objects](http://www.visionobjects.com/) (handwriting recognition).
 
 ##About
 ![](/images/authors/opatry.png)
@@ -15,10 +15,10 @@ email address: <olivier.patry@gmail.com>
 
 ##Knowledge
 Languages & frameworks
-:	**Java** (J2ME, J2SE, OSGi), Ant, &#8230;
+:	**Java** (J2ME, J2SE, OSGi), **C++**, Ant, CMake, &#8230;
 
 Tools & operating systems
-:	**Eclipse**, Jazz RTC, GNU/Linux, Microsoft Windows, LaTeX, &#8230;
+:	**Eclipse**, Git, Jazz RTC, GNU/Linux, Microsoft Windows, LaTeX, &#8230;
 
 Methods
 :	Object Oriented Patterns, Extrem programming Scrum, MDE/MDA, &#8230;
