no more doing constrained embedded development

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Welcome here! You are on the personal website of Olivier Patry, software enginee
 ![](/images/authors/opatry.png)
 28 years old.
 
-Software engineer specialized in software **architecture** and **object oriented** programming for **constrained embedded devices**.
+Software engineer specialized in software **architecture** and **object oriented** programming for **embedded devices**.
 
 email address: <olivier.patry@gmail.com>
 
