--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,300italic">
   <link rel="stylesheet" type="text/css" href="/assets/styles.css">
-  <link rel="stylesheet" type="text/css" href="/assets/pygments/manni.css">
+  <link rel="stylesheet" type="text/css" href="/assets/highlighting/thankful_eyes.css">
   <link rel="shortcut icon" href="/favicon.ico">
 
   <meta name=viewport content="width=device-width">
