deploy: cc0ebaa02de41230314e20ee0ec3fe6e01d3b689

--- a/404.html
+++ b/404.html
@@ -18,30 +18,15 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
 
 </head>
+
 <body>
-
 <div class="site">
-<header class="title">
-  <h1 class="author">
-  <a href="/" title="back to home">Olivier Patry</a>
-  </h1>
-</header>
+<h1 id="document-not-found">Document Not Found</h1>
 
-<div class="content">
-  <article>
-    <header>
-    <h1>Document Not Found</h1>
-    </header>
+<p>Sorry, the document your were looking for could not be found.</p>
 
-    <section>
-    <p>Sorry, the document your were looking for could not be found.</p>
+<p>🏠 <a href="/">Back to home</a></p>
 
-    </section>
-
-
-  </article>
 </div>
-
-</div> <!-- /.site -->
 </body>
 </html>
