--- a/index.html
+++ b/index.html
@@ -18,22 +18,15 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
 
 </head>
+
 <body>
-
 <div class="site">
-<header class="title">
-  <h1 class="author">
-  <a href="/" title="back to home">Olivier Patry</a>
-  </h1>
-</header>
 
-<div class="content">
-  <article>
-    <header>
-    <h1>Home</h1>
-    </header>
+  <header class="hero">
+    <h1>Olivier Patry</h1>
+  </header>
 
-    <section>
+  <div class="content">
     <p>You are on the personal website of Olivier Patry, software engineer working for <a href="https://myscript.com/">MyScript</a> (handwriting recognition for text, math, geometry, diagram: <a href="https://developer.myscript.com/">developer portal</a>).</p>
 
 <p>Specialized in software <strong>architecture</strong> and <strong>object oriented</strong> programming for <strong>mobile/embedded devices</strong> mainly using
@@ -41,8 +34,8 @@
 
 <p>I’m currently working as MyScript’s Mobile Application Program Manager.</p>
 
-<p><img src="images/nebo.svg" alt="" /> <a href="https://nebo.app">Nebo</a>: note taking application<br />
-<img src="images/calculator.svg" alt="" /> <a href="https://www.myscript.com/calculator/">Calculator</a>: handwriting calculator application</p>
+<p><img src="/images/nebo.svg" alt="" /> <a href="https://nebo.app">Nebo</a>: note taking application<br />
+<img src="/images/calculator.svg" alt="" /> <a href="https://www.myscript.com/calculator/">Calculator</a>: handwriting calculator application</p>
 
 <div style="margin: 0 auto; width: 560px; max-width: 100%;">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/6iNqExuVra4?autoplay=0&amp;rel=0" allowfullscreen=""></iframe>
@@ -79,12 +72,8 @@
 </ul>
 
 
-    </section>
+  </div>
 
-
-  </article>
 </div>
-
-</div> <!-- /.site -->
 </body>
 </html>
