deploy: d6c78e9a4d2f6d8095ec17bc3ec07fef5efe02fc

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   </header>
 
   <div class="content">
-    <p>You are on the personal website of Olivier Patry, software engineer working for <a href="https://myscript.com/">MyScript</a> (handwriting recognition for text, math, geometry, diagram: <a href="https://developer.myscript.com/">developer portal</a>).</p>
+    <p>You are on the personal website of Olivier Patry, software engineer working for <a href="https://www.myscript.com/">MyScript</a> (handwriting recognition for text, math, geometry, diagram: <a href="https://developer.myscript.com/">developer portal</a>).</p>
 
 <p>Specialized in software <strong>architecture</strong> and <strong>object oriented</strong> programming for <strong>mobile/embedded devices</strong> mainly using
 <strong>Kotlin</strong>, <strong>Java</strong> and <strong>C++</strong> (Android &amp; Desktop).</p>
 
 <p>I’m currently working as MyScript’s Mobile Application Program Manager.</p>
 
-<p><img src="/images/nebo.svg" alt="" /> <a href="https://nebo.app">Nebo</a>: note taking application<br />
+<p><img src="/images/nebo.svg" alt="" /> <a href="https://www.nebo.app/">Nebo</a>: note taking application<br />
 <img src="/images/calculator.svg" alt="" /> <a href="https://www.myscript.com/calculator/">Calculator</a>: handwriting calculator application</p>
 
 <div style="margin: 0 auto; width: 560px; max-width: 100%;">
