deploy: 9fbe8d378e87d19a06e98cc3ce9622da83bea335

--- a/index.html
+++ b/index.html
@@ -27,15 +27,34 @@
   </header>
 
   <div class="content">
-    <p>You are on the personal website of Olivier Patry, software engineer working for <a href="https://www.myscript.com/">MyScript</a> (handwriting recognition for text, math, geometry, diagram: <a href="https://developer.myscript.com/">developer portal</a>).</p>
+    <p>You are on the personal website of Olivier Patry, working at <a href="https://www.myscript.com/">MyScript</a> as Apps Team lead.</p>
 
-<p>Specialized in software <strong>architecture</strong> and <strong>object oriented</strong> programming for <strong>mobile/embedded devices</strong> mainly using
-<strong>Kotlin</strong>, <strong>Java</strong> and <strong>C++</strong> (Android &amp; Desktop).</p>
+<p>MyScript is do handwriting recognition for text, math and diagram (see <a href="https://developer.myscript.com/">developer portal</a>).</p>
 
-<p>I’m currently working as MyScript’s Mobile Application Program Manager.</p>
+<h2 id="apps">Apps</h2>
 
-<p><img src="/images/nebo.svg" alt="" /> <a href="https://www.nebo.app/">Nebo</a>: note taking application<br />
-<img src="/images/calculator.svg" alt="" /> <a href="https://www.myscript.com/calculator/">Calculator</a>: handwriting calculator application</p>
+<h3 id="imagescalculatorsvg-calculatorhttpswwwmyscriptcomcalculator-handwriting-calculator-application"><img src="/images/calculator.svg" alt="" /> <a href="https://www.myscript.com/calculator/">Calculator</a>: handwriting calculator application</h3>
+
+<blockquote>
+  <p><strong>The easiest way to calculate</strong></p>
+</blockquote>
+
+<p class="metadata">Available on
+  <a href="https://apps.apple.com/us/app/myscript-calculator-handwriting-calculator/id1304488725">iOS</a> and
+  <a href="https://play.google.com/store/apps/details?id=com.myscript.calculator">Android</a>.</p>
+
+<h3 id="imagesnebosvg-nebohttpswwwneboapp-note-taking-application"><img src="/images/nebo.svg" alt="" /> <a href="https://www.nebo.app/">Nebo</a>: note taking application</h3>
+
+<blockquote>
+  <p><strong>The future of note‑taking</strong></p>
+
+  <p>Take smarter, more beautiful notes with the only app that makes handwriting as powerful as typed text.</p>
+</blockquote>
+
+<p class="metadata">Available on
+ <a href="https://apps.apple.com/us/app/myscript-nebo-best-way-to/id1119601770">iOS</a>,
+ <a href="https://play.google.com/store/apps/details?id=com.myscript.nebo">Android</a> and
+ <a href="https://www.microsoft.com/en-us/p/nebo/9nblggh4nlb0">Windows</a>.</p>
 
 <div style="margin: 0 auto; width: 560px; max-width: 100%;">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/6iNqExuVra4?autoplay=0&amp;rel=0" allowfullscreen=""></iframe>
