deploy: ac09224928071059d42be8c1a768ce60834320e9

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="content">
     <p>You are on the personal website of Olivier Patry, working at <a href="https://www.myscript.com/">MyScript</a> as Apps Team lead.</p>
 
-<p>MyScript is do handwriting recognition for text, math and diagram (see <a href="https://developer.myscript.com/">developer portal</a>).</p>
+<p>MyScript develops handwriting recognition for text, math and diagram (see <a href="https://developer.myscript.com/">developer portal</a>) and publishes SDK and Apps that leverage it.</p>
 
 <h2 id="apps">Apps</h2>
 
