--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  <a href="https://play.google.com/store/apps/details?id=com.myscript.nebo">Android</a> and
  <a href="https://www.microsoft.com/en-us/p/nebo/9nblggh4nlb0">Windows</a>.</p>
 
-<div style="margin: 0 auto; width: 560px; max-width: 100%;">
+<div class="centered-media">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/6iNqExuVra4?autoplay=0&amp;rel=0" allowfullscreen=""></iframe>
 </div>
 
