deploy: b0954088eecab0657f2e30a6152d67e79f804fb0

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="UTF-8" />
-  <title>Home | Olivier Patry</title>
+  <title>Projects | Olivier Patry</title>
 
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,300italic">
   <link rel="stylesheet" type="text/css" href="/assets/styles.css">
@@ -21,20 +21,17 @@
 
 <body>
 <div class="site">
+  <header class="title">
+    <p>🏠 <a href="/">Back to home</a></p>
+  </header>
 
   <div class="content">
-    <p class="avatar"><img src="https://www.gravatar.com/avatar/3eae340e049abecfb4a117ad7a907bd1?s=256&amp;d=mp" alt="" /></p>
+  <article>
+    <header>
+    <h1>Projects</h1>
+    </header>
 
-<h1 id="olivier-patry">Olivier Patry</h1>
-
-<p class="subtitle">Engineering Manager &amp; Senior software engineer</p>
-
-<h2 id="summary">Summary</h2>
-<p>Engineering Manager with 15 years of experience, including 8 years leading mobile development teams. Proven track record in delivering high-quality software, and fostering team growth. Expertise in Android development, domain and business logic integration, and release management.</p>
-
-<p class="metadata">See my <a href="/resume.html">resume</a>.</p>
-
-<h2 id="projects">Projects</h2>
+    <section>
 <div class="project-cards">
 
 <div class="project-card">
@@ -113,16 +110,8 @@
 
 </div>
 
-<hr />
-
-<div class="special-links">
-  <p><a href="https://www.linkedin.com/in/opatry"><span class="icon-linkedin" title="opatry on LinkedIn"></span></a>
-<a href="https://twitter.com/o_patry"><span class="icon-twitter" title="o_patry on Twitter"></span></a>
-<a href="https://github.com/opatry"><span class="icon-github" title="opatry on Github"></span></a>
-<a href="https://androiddev.social/@opatry"><span class="icon-mastodon" title="androiddev.social/@opatry on Mastodon"></span></a>
-<a href="/rss.xml"><span class="icon-rss2"></span></a></p>
-</div>
-
+    </section>
+  </article>
   </div>
 
 </div>
