deploy: af3e2ae5abb22d6829ace5009e7f1935099d46bf

--- a/projects/nebo.html
+++ b/projects/nebo.html
@@ -39,7 +39,7 @@
 
 <div class="project-card centered-media">
   <div class="project-card-content">
-    <img src="https://media.licdn.com/dms/image/v2/D4E2DAQG1-nqXxM7RRA/profile-treasury-image-shrink_800_800/profile-treasury-image-shrink_800_800/0/1719863863116?e=1729087200&amp;v=beta&amp;t=fR6AI3RjEUNPhAp-TnJdg7b53Hj70B3rL87qIf9l9dg" alt="" />
+    <img src="/assets/projects/nebo.png" alt="" />
   </div>
 </div>
 
