--- a/projects/stanza.html
+++ b/projects/stanza.html
@@ -39,7 +39,7 @@
 
 <div class="project-card centered-media">
   <div class="project-card-content">
-    <img src="https://www.dell.com/wp-uploads/2021/12/Concept-Stanza-1.png" alt="" />
+    <img src="/assets/projects/stanza.png" alt="" />
   </div>
 </div>
 
