--- a/projects/taskfolio.html
+++ b/projects/taskfolio.html
@@ -39,7 +39,7 @@
 
 <div class="project-card centered-media">
   <div class="project-card-content">
-    <img src="https://media.licdn.com/dms/image/v2/D4E2DAQFZPJyRRAWhiw/profile-treasury-image-shrink_1920_1920/profile-treasury-image-shrink_1920_1920/0/1727784135345?e=1729087200&amp;v=beta&amp;t=AUnzfcuFWZU1c_SN5ZUauiJXofslb5QvH13eSI4NqbY" alt="" />
+    <img src="/assets/projects/taskfolio.png" alt="" />
   </div>
 </div>
 
