--- a/projects/tydom.html
+++ b/projects/tydom.html
@@ -39,7 +39,7 @@
 
 <div class="project-card centered-media">
   <div class="project-card-content">
-    <img src="https://www.deltadore.fr/uploads/media/FR/fr/3d7aecf9b2a6cbfe888c64012525dffd15548f3d.jpeg" alt="" />
+    <img src="/assets/projects/tydom.png" alt="" />
   </div>
 </div>
 
