--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <div class="project-card">
   <div class="project-card-content">
-    <a class="project-card-image" href="/projects/nebo.html"><img src="https://media.licdn.com/dms/image/v2/D4E2DAQG1-nqXxM7RRA/profile-treasury-image-shrink_800_800/profile-treasury-image-shrink_800_800/0/1719863863116?e=1729087200&amp;v=beta&amp;t=fR6AI3RjEUNPhAp-TnJdg7b53Hj70B3rL87qIf9l9dg" alt="" /></a>
+    <a class="project-card-image" href="/projects/nebo.html"><img src="/assets/projects/nebo.png" alt="" /></a>
     <div class="project-card-info">
       <div class="project-card-info-wrap">
         <h3 class="project-card-title">MyScript Nebo</h3>
@@ -54,7 +54,7 @@
 
 <div class="project-card">
   <div class="project-card-content">
-    <a class="project-card-image" href="/projects/calculator.html"><img src="https://media.licdn.com/dms/image/v2/D4E2DAQEAHaAN4StYvg/profile-treasury-image-shrink_800_800/profile-treasury-image-shrink_800_800/0/1719864002002?e=1729087200&amp;v=beta&amp;t=75Olil_bG3Kg73-pR5eMwbMdkIucEyqIUZImtMOYvb0" alt="" /></a>
+    <a class="project-card-image" href="/projects/calculator.html"><img src="/assets/projects/calculator.png" alt="" /></a>
     <div class="project-card-info">
       <div class="project-card-info-wrap">
         <h3 class="project-card-title">MyScript Calculator</h3>
@@ -69,7 +69,7 @@
 
 <div class="project-card">
   <div class="project-card-content">
-    <a class="project-card-image" href="/projects/stanza.html"><img src="https://www.dell.com/wp-uploads/2021/12/Concept-Stanza-1.png" alt="" /></a>
+    <a class="project-card-image" href="/projects/stanza.html"><img src="/assets/projects/stanza.png" alt="" /></a>
     <div class="project-card-info">
       <div class="project-card-info-wrap">
         <h3 class="project-card-title">Concept Stanza — Dell Innovation | Singapore</h3>
@@ -84,7 +84,7 @@
 
 <div class="project-card">
   <div class="project-card-content">
-    <a class="project-card-image" href="/projects/tydom.html"><img src="https://www.deltadore.fr/uploads/media/FR/fr/3d7aecf9b2a6cbfe888c64012525dffd15548f3d.jpeg" alt="" /></a>
+    <a class="project-card-image" href="/projects/tydom.html"><img src="/assets/projects/tydom.png" alt="" /></a>
     <div class="project-card-info">
       <div class="project-card-info-wrap">
         <h3 class="project-card-title">TYDOM — Delta Dore</h3>
@@ -99,7 +99,7 @@
 
 <div class="project-card">
   <div class="project-card-content">
-    <a class="project-card-image" href="/projects/taskfolio.html"><img src="https://media.licdn.com/dms/image/v2/D4E2DAQFZPJyRRAWhiw/profile-treasury-image-shrink_1920_1920/profile-treasury-image-shrink_1920_1920/0/1727784135345?e=1729087200&amp;v=beta&amp;t=AUnzfcuFWZU1c_SN5ZUauiJXofslb5QvH13eSI4NqbY" alt="" /></a>
+    <a class="project-card-image" href="/projects/taskfolio.html"><img src="/assets/projects/taskfolio.png" alt="" /></a>
     <div class="project-card-info">
       <div class="project-card-info-wrap">
         <h3 class="project-card-title">Taskfolio</h3>
