--- a/projects/calculator.html
+++ b/projects/calculator.html
@@ -39,7 +39,7 @@
 
 <div class="project-card centered-media">
   <div class="project-card-content">
-    <img src="https://media.licdn.com/dms/image/v2/D4E2DAQEAHaAN4StYvg/profile-treasury-image-shrink_800_800/profile-treasury-image-shrink_800_800/0/1719864002002?e=1729087200&amp;v=beta&amp;t=75Olil_bG3Kg73-pR5eMwbMdkIucEyqIUZImtMOYvb0" alt="" />
+    <img src="/assets/projects/calculator.png" alt="" />
   </div>
 </div>
 
