--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
 
 </div>
 
-<hr />
-
-<div class="special-links">
+<div class="special-links" style="text-align: center; margin-top: 30px;">
   <p><a href="https://www.linkedin.com/in/opatry"><span class="icon-linkedin" title="opatry on LinkedIn"></span></a>
 <a href="https://twitter.com/o_patry"><span class="icon-twitter" title="o_patry on Twitter"></span></a>
 <a href="https://github.com/opatry"><span class="icon-github" title="opatry on Github"></span></a>
