deploy: 782a245aa3993bf030bd2e8c11de662970ffbfd9

--- a/index.html
+++ b/index.html
@@ -27,15 +27,75 @@
 
 <h1 id="olivier-patry">Olivier Patry</h1>
 
-<p class="subtitle">Engineering Manager &amp; Senior software engineer</p>
+<p class="subtitle">Engineering Manager, Technical leader, Senior software engineer (Mobile/Android)</p>
 
 <h2 id="summary">Summary</h2>
-<p>Engineering Manager with 15 years of experience, including 9 years leading mobile development teams. Proven track record in delivering high-quality software, and fostering team growth. Expertise in Android development, domain and business logic integration, and release management.</p>
+<p>Engineering Manager &amp; Technical leader with 16 years of experience, including 10 years leading mobile development teams. Proven track record in delivering high-quality software, and fostering team growth. Expertise in Android development, domain and business logic integration, and release management.</p>
 
 <p class="metadata">See my <a href="/resume.html">resume</a>.</p>
 
 <h2 id="projects">Projects</h2>
 <div class="project-cards">
+
+<div class="project-card">
+  <div class="project-card-content">
+    <a class="project-card-image" href="/projects/bnpp.html"><img src="/assets/projects/bnpp.png" alt="" /></a>
+    <div class="project-card-info">
+      <div class="project-card-info-wrap">
+        <h3 class="project-card-title">Mes Comptes / Hello Bank!</h3>
+      </div>
+      <div class="project-card-info-wrap">
+        <div class="project-card-subtitle">March 2025 — Present</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="project-card">
+  <div class="project-card-content">
+    <a class="project-card-image" href="/projects/nafix.html"><img src="/assets/projects/nafix.png" alt="" /></a>
+    <div class="project-card-info">
+      <div class="project-card-info-wrap">
+        <h3 class="project-card-title">Nafix</h3>
+      </div>
+      <div class="project-card-info-wrap">
+        <div class="project-card-subtitle">January 2026 — Present</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="project-card">
+  <div class="project-card-content">
+    <a class="project-card-image" href="/projects/taskfolio.html"><img src="/assets/projects/taskfolio.png" alt="" /></a>
+    <div class="project-card-info">
+      <div class="project-card-info-wrap">
+        <h3 class="project-card-title">Taskfolio</h3>
+      </div>
+      <div class="project-card-info-wrap">
+        <div class="project-card-subtitle">September 2024 — Present</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="project-card">
+  <div class="project-card-content">
+    <a class="project-card-image" href="/projects/mybookshelf.html"><img src="/assets/projects/mybookshelf.png" alt="" /></a>
+    <div class="project-card-info">
+      <div class="project-card-info-wrap">
+        <h3 class="project-card-title">My bookshelf</h3>
+      </div>
+      <div class="project-card-info-wrap">
+        <div class="project-card-subtitle">May 2024 — Present</div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <div class="project-card">
   <div class="project-card-content">
@@ -81,44 +141,12 @@
   </div>
 </div>
 
-
-<div class="project-card">
-  <div class="project-card-content">
-    <a class="project-card-image" href="/projects/tydom.html"><img src="/assets/projects/tydom.png" alt="" /></a>
-    <div class="project-card-info">
-      <div class="project-card-info-wrap">
-        <h3 class="project-card-title">TYDOM — Delta Dore</h3>
-      </div>
-      <div class="project-card-info-wrap">
-        <div class="project-card-subtitle">January 2012 — January 2013</div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="project-card">
-  <div class="project-card-content">
-    <a class="project-card-image" href="/projects/taskfolio.html"><img src="/assets/projects/taskfolio.png" alt="" /></a>
-    <div class="project-card-info">
-      <div class="project-card-info-wrap">
-        <h3 class="project-card-title">Taskfolio</h3>
-      </div>
-      <div class="project-card-info-wrap">
-        <div class="project-card-subtitle">September 2024 — October 2024</div>
-      </div>
-    </div>
-  </div>
-</div>
-
 </div>
 
 <div class="special-links" style="text-align: center; margin-top: 30px;">
   <p><a href="https://www.linkedin.com/in/opatry"><span class="icon-linkedin" title="opatry on LinkedIn"></span></a>
-<a href="https://twitter.com/o_patry"><span class="icon-twitter" title="o_patry on Twitter"></span></a>
 <a href="https://github.com/opatry"><span class="icon-github" title="opatry on Github"></span></a>
-<a href="https://androiddev.social/@opatry"><span class="icon-mastodon" title="androiddev.social/@opatry on Mastodon"></span></a>
-<a href="/rss.xml"><span class="icon-rss2"></span></a></p>
+<a href="https://twitter.com/o_patry"><span class="icon-twitter" title="o_patry on Twitter"></span></a></p>
 </div>
 
   </div>
