--- a/projects/bnpp.html
+++ b/projects/bnpp.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="UTF-8" />
-  <title>Taskfolio | Olivier Patry</title>
+  <title>BNP Paribas | Olivier Patry</title>
 
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,300italic">
   <link rel="stylesheet" type="text/css" href="/assets/styles.css">
@@ -28,22 +28,24 @@
   <div class="content">
   <article>
     <header>
-    <h1>Taskfolio</h1>
+    <h1>BNP Paribas</h1>
     </header>
 
     <section>
 
-<p class="metadata">September 2024 — Present</p>
+<p class="metadata">March 2025 — Present</p>
 
-<p><strong>Taskfolio</strong> is a personal project designed to showcase my Android development skills. The app is a lightweight task manager that integrates with Google Tasks.</p>
+<p><strong>Mes Comptes</strong> and <strong>Hello Bank!</strong> Android applications.</p>
 
 <div class="project-card centered-media">
   <div class="project-card-content">
-    <img src="/assets/projects/taskfolio.png" alt="" />
+    <img src="/assets/projects/bnpp.png" alt="" />
   </div>
 </div>
 
-<p class="button"><a href="https://opatry.github.io/taskfolio/">See project website for more…</a></p>
+<p class="button"><a href="https://play.google.com/store/apps/details?id=net.bnpparibas.mescomptes">See Mes Comptes on Google Play…</a></p>
+
+<p class="button"><a href="https://play.google.com/store/apps/details?id=fr.bnpp.digitalbanking">See Hello Bank! on Google Play…</a></p>
 
     </section>
   </article>
