--- a/projects/h2go.html
+++ b/projects/h2go.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="UTF-8" />
-  <title>TYDOM — Delta Dore | Olivier Patry</title>
+  <title>H₂Go! | Olivier Patry</title>
 
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,300italic">
   <link rel="stylesheet" type="text/css" href="/assets/styles.css">
@@ -28,22 +28,22 @@
   <div class="content">
   <article>
     <header>
-    <h1>TYDOM — Delta Dore</h1>
+    <h1>H₂Go!</h1>
     </header>
 
     <section>
 
-<p class="metadata">January 2012 — January 2013</p>
+<p class="metadata">June 2025 — Present</p>
 
-<p>Smart home automation hub that allows users to control various IoT devices, such as lighting, heating, security, and shutters. MicroEJ’s role involved ensuring the UI could run efficiently on constrained devices, with low memory and processing power, using its embedded platform. My focus was to deliver a highly customizable, lightweight UI toolkit.</p>
+<p><strong>H₂Go!</strong> is a personal project of a user-friendly Android application designed to help users monitor and improve their daily water consumption. The app’s core philosophy is “tech for good,” focusing on simplicity, positive reinforcement, and ease of use. The primary interaction—adding a glass of water—should be achievable with a single tap, both from within the app and from a home screen widget.</p>
 
 <div class="project-card centered-media">
   <div class="project-card-content">
-    <img src="/assets/projects/tydom.png" alt="" />
+    <img src="/assets/projects/h2go.png" alt="" />
   </div>
 </div>
 
-<p class="button"><a href="https://www.deltadore.fr/app-tydom">See project website for more…</a></p>
+<p class="button"><a href="https://github.com/opatry/h2go">See project repository for more…</a></p>
 
     </section>
   </article>
