--- a/projects/mybookshelf.html
+++ b/projects/mybookshelf.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="UTF-8" />
-  <title>Taskfolio | Olivier Patry</title>
+  <title>My bookshelf | Olivier Patry</title>
 
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,300italic">
   <link rel="stylesheet" type="text/css" href="/assets/styles.css">
@@ -28,22 +28,22 @@
   <div class="content">
   <article>
     <header>
-    <h1>Taskfolio</h1>
+    <h1>My bookshelf</h1>
     </header>
 
     <section>
 
-<p class="metadata">September 2024 — Present</p>
+<p class="metadata">May 2024 — Present</p>
 
-<p><strong>Taskfolio</strong> is a personal project designed to showcase my Android development skills. The app is a lightweight task manager that integrates with Google Tasks.</p>
+<p><strong>My bookshelf</strong> is a personal project to manage and track my reading progress.</p>
 
 <div class="project-card centered-media">
   <div class="project-card-content">
-    <img src="/assets/projects/taskfolio.png" alt="" />
+    <img src="/assets/projects/mybookshelf.png" alt="" />
   </div>
 </div>
 
-<p class="button"><a href="https://opatry.github.io/taskfolio/">See project website for more…</a></p>
+<p class="button"><a href="https://lecture.opatry.net/">See My Bookshelf…</a></p>
 
     </section>
   </article>
