--- a/resume.html
+++ b/resume.html
@@ -34,18 +34,28 @@
     <section>
 <h1 id="olivier-patry">Olivier Patry</h1>
 
-<p class="subtitle">Engineering Manager &amp; Senior software engineer</p>
+<p class="subtitle">Engineering Manager, Technical leader, Senior software engineer (Mobile/Android)</p>
 
 <h3 id="summary">Summary</h3>
-<p>Engineering Manager with 15 years of experience, including 9 years leading mobile development teams. Proven track record in delivering high-quality software, and fostering team growth. Expertise in Android development, domain and business logic integration, and release management.</p>
+<p>Engineering Manager &amp; Technical leader with 16 years of experience, including 10 years leading mobile development teams. Proven track record in delivering high-quality software, and fostering team growth. Expertise in Android development, domain and business logic integration, and release management.</p>
 
 <h3 id="experience">Experience</h3>
 
-<h4 id="head-of-mobile-myscripthttpswwwmyscriptcom">Head of mobile @<a href="https://www.myscript.com/">MyScript</a></h4>
+<h4 id="android-techincal-leader-bnp-paribashttpsmabanquebnpparibas">Android Techincal Leader @<a href="https://mabanque.bnpparibas/">BNP Paribas</a></h4>
 
-<p class="metadata">April 2018 — September 2024</p>
+<p class="metadata">March 2025 — Present</p>
+
+<p>Technical lead of mobile squad development team (~10 people) to deliver high quality features for MesComptes and HelloBank! applications.</p>
+
+<hr />
+
+<h4 id="head-of-mobile-myscripthttpswwwmyscriptcom">Head of Mobile @<a href="https://www.myscript.com/">MyScript</a></h4>
+
+<p class="metadata">April 2018 — November 2024</p>
 
 <p>Empowering development teams (10+ people) to achieve challenging roadmap execution for multiple mobile applications.</p>
+
+<hr />
 
 <h4 id="engineering-manager-myscripthttpswwwmyscriptcom">Engineering Manager @<a href="https://www.myscript.com/">MyScript</a></h4>
 
@@ -53,11 +63,15 @@
 
 <p>Leading the development team of MyScript Note-taking application Nebo made for iOS, Android &amp; Windows mobile platforms.</p>
 
+<hr />
+
 <h4 id="technical-lead-myscripthttpswwwmyscriptcom">Technical Lead @<a href="https://www.myscript.com/">MyScript</a></h4>
 
 <p class="metadata">September 2013 — June 2016</p>
 
 <p>Lead the development of Application Toolkit 2.0.</p>
+
+<hr />
 
 <h4 id="software-engineer-microejhttpswwwmicroejcom">Software Engineer @<a href="https://www.microej.com/">MicroEJ</a></h4>
 
