--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,66 @@
 
 <div class="project-card">
   <div class="project-card-content">
+    <a class="project-card-image" href="/projects/bnpp.html"><img src="/assets/projects/bnpp.png" alt="" /></a>
+    <div class="project-card-info">
+      <div class="project-card-info-wrap">
+        <h3 class="project-card-title">Mes Comptes / Hello Bank!</h3>
+      </div>
+      <div class="project-card-info-wrap">
+        <div class="project-card-subtitle">March 2025 — Present</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="project-card">
+  <div class="project-card-content">
+    <a class="project-card-image" href="/projects/nafix.html"><img src="/assets/projects/nafix.png" alt="" /></a>
+    <div class="project-card-info">
+      <div class="project-card-info-wrap">
+        <h3 class="project-card-title">Nafix</h3>
+      </div>
+      <div class="project-card-info-wrap">
+        <div class="project-card-subtitle">January 2026 — Present</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="project-card">
+  <div class="project-card-content">
+    <a class="project-card-image" href="/projects/taskfolio.html"><img src="/assets/projects/taskfolio.png" alt="" /></a>
+    <div class="project-card-info">
+      <div class="project-card-info-wrap">
+        <h3 class="project-card-title">Taskfolio</h3>
+      </div>
+      <div class="project-card-info-wrap">
+        <div class="project-card-subtitle">September 2024 — Present</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="project-card">
+  <div class="project-card-content">
+    <a class="project-card-image" href="/projects/mybookshelf.html"><img src="/assets/projects/mybookshelf.png" alt="" /></a>
+    <div class="project-card-info">
+      <div class="project-card-info-wrap">
+        <h3 class="project-card-title">My bookshelf</h3>
+      </div>
+      <div class="project-card-info-wrap">
+        <div class="project-card-subtitle">May 2024 — Present</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="project-card">
+  <div class="project-card-content">
     <a class="project-card-image" href="/projects/nebo.html"><img src="/assets/projects/nebo.png" alt="" /></a>
     <div class="project-card-info">
       <div class="project-card-info-wrap">
@@ -73,36 +133,6 @@
       </div>
       <div class="project-card-info-wrap">
         <div class="project-card-subtitle">August 2021 — January 2022</div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="project-card">
-  <div class="project-card-content">
-    <a class="project-card-image" href="/projects/tydom.html"><img src="/assets/projects/tydom.png" alt="" /></a>
-    <div class="project-card-info">
-      <div class="project-card-info-wrap">
-        <h3 class="project-card-title">TYDOM — Delta Dore</h3>
-      </div>
-      <div class="project-card-info-wrap">
-        <div class="project-card-subtitle">January 2012 — January 2013</div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="project-card">
-  <div class="project-card-content">
-    <a class="project-card-image" href="/projects/taskfolio.html"><img src="/assets/projects/taskfolio.png" alt="" /></a>
-    <div class="project-card-info">
-      <div class="project-card-info-wrap">
-        <h3 class="project-card-title">Taskfolio</h3>
-      </div>
-      <div class="project-card-info-wrap">
-        <div class="project-card-subtitle">September 2024 — October 2024</div>
       </div>
     </div>
   </div>
