deploy: a0c17f366826ac77fdbb28ff838f70df1cb4c7ec

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 <h1 id="olivier-patry">Olivier Patry</h1>
 
-<p class="subtitle">Engineering Manager, Technical leader, Senior software engineer (Mobile/Android)</p>
+<p class="subtitle">Engineering Manager, Technical lead, Senior software engineer (Mobile/Android)</p>
 
 <h2 id="summary">Summary</h2>
-<p>Engineering Manager &amp; Technical leader with 16 years of experience, including 10 years leading mobile development teams. Proven track record in delivering high-quality software, and fostering team growth. Expertise in Android development, domain and business logic integration, and release management.</p>
+<p>Engineering Manager &amp; Technical lead with 16 years of experience, including 10 years leading mobile development teams. Proven track record in delivering high-quality software, and fostering team growth. Expertise in Android development, domain and business logic integration, and release management.</p>
 
 <p class="metadata">See my <a href="/resume.html">resume</a>.</p>
 
