--- a/resume.html
+++ b/resume.html
@@ -34,10 +34,10 @@
     <section>
 <h1 id="olivier-patry">Olivier Patry</h1>
 
-<p class="subtitle">Engineering Manager, Technical leader, Senior software engineer (Mobile/Android)</p>
+<p class="subtitle">Engineering Manager, Technical lead, Senior software engineer (Mobile/Android)</p>
 
 <h3 id="summary">Summary</h3>
-<p>Engineering Manager &amp; Technical leader with 16 years of experience, including 10 years leading mobile development teams. Proven track record in delivering high-quality software, and fostering team growth. Expertise in Android development, domain and business logic integration, and release management.</p>
+<p>Engineering Manager &amp; Technical lead with 16 years of experience, including 10 years leading mobile development teams. Proven track record in delivering high-quality software, and fostering team growth. Expertise in Android development, domain and business logic integration, and release management.</p>
 
 <h3 id="experience">Experience</h3>
 
